styles/page.module.scss
@import "variables";
@import "animations";
@import "mixins";

.home_page {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  padding: 100px 0 40px;

  .hero {
    width: 100%;
    height: 662px;
    padding: 20px 0px 20px 60px;
    margin-bottom: 100px;
    border-radius: 24px;
    background-image: url("../public/hero-bg.png");
    background-size: cover;
    background-position: left;
    background-repeat: no-repeat;
    display: flex;
    align-items: center;
    justify-content: space-between;
    box-sizing: border-box;
    overflow: hidden;

    .hero_content {
      flex: 0.5;
      height: 100%;
      display: flex;
      justify-content: center;
      flex-direction: column;
      gap: 20px;

      .hero_badge {
        color: $neon-green;
        text-transform: uppercase;
        gap: 8px;
      }

      h1 {
        font: {
          size: 46px;
          weight: 600;
        }

        letter-spacing: -1px;
      }

      p {
        opacity: 0.75;
        letter-spacing: 0.5px;
        line-height: 28px;
        font-weight: 400;
      }

      .hero_buttons {
        display: flex;
        gap: 20px;

        .hero_btn {
          width: fit-content;
          padding: 12px 20px;
          border-radius: 8px;
          background-color: $neon-green;
          fill: $black-text;
          font-weight: 600;
          @include center;
          gap: 10px;

          &:nth-child(1) {
            color: $black-text;

            &:hover {
              color: $neon-green;
              background-color: transparent;
              fill: $neon-green;
              border: 2px solid $neon-green;
            }
          }

          &:nth-child(2) {
            fill: $neon-green;
            color: $neon-green;
            background-color: transparent;
            border: 2px solid $neon-green;

            svg {
              width: 14px;
              height: 14px;
            }

            &:hover {
              color: $black-text;
              background-color: $neon-green;
              fill: $black-text;
            }
          }
        }
      }
    }

    .hero_image {
      flex: 0.5;
      display: flex;
      align-items: center;
      justify-content: center;
      object-fit: contain;
      position: relative;

      img {
        z-index: 2;
        max-width: 672px;
        max-height: 672px;
        width: 100%;
        height: 100%;
        object-fit: contain;
      }

      .image_glow {
        @include glow;
        z-index: 1;
        height: 70%;
        width: 70%;
        position: absolute;
        margin-left: auto;
        margin-right: auto;
        left: 0;
        right: 0;
        text-align: center;
        border-radius: 100%;
        background: rgba(97, 204, 0, 0.50);
        filter: blur(130px);
      }
    }
  }

  @media (max-width: 1096px) {

    .hero {
      height: 562px;
      padding: 20px 0px 20px 40px;

      .hero_content {
        flex: 0.5;

        h1 {
          font-size: 32px;
        }

        p {
          font-size: 16px;
          line-height: 24px;
        }

        .hero_btn {
          padding: 10px 16px;
          font-size: 14px;
        }
      }

      .hero_image {
        flex: 0.5;
      }
    }
  }

  @media (max-width: 880px) {
    .hero {
      flex-direction: column-reverse;
      padding: 0 30px 30px;
      height: fit-content;

      .hero_content {
        align-items: center;

        h1 {
          font-size: 28px;
          text-align: center;
        }

        p {
          font-size: 16px;
          line-height: 24px;
          text-align: center;
        }

        @media screen and (max-width: 476px) {
          h1 {
            font-size: 24px;
          }

          p {
            font-size: 12px;
            line-height: 20px;
          }
        }

        .hero_buttons {
          width: 100%;
          flex-direction: column;

          .hero_btn {
            width: 100%;
            padding: 10px 16px;
            font-size: 14px;
          }
        }
      }

      .hero_image {
        img {
          z-index: 2;
          max-width: 300px;
          max-height: 300px;
          width: 100%;
          height: 100%;
          object-fit: contain;
        }
      }
    }
  }

  @media (max-width: 425px) {
    padding: 90px 0 40px;

    .hero {
      margin-bottom: 60px;
      border-radius: 5px;
    }
  }

  .section_head {
    max-width: 580px;
  }

  .token_section {
    @include center(column);
    width: 100vw;
    padding: 150px 40px 80px 40px;
    background-color: $black-section-bg;
    position: relative;

    .curvedSectionDiv {
      height: 50px;
      width: 100vw;
      border-bottom-left-radius: 50% 100%;
      border-bottom-right-radius: 50% 100%;
      background-color: #18171c;
      position: absolute;
      left: 0px;
      top: 0px
    }

    @media screen and (max-width: 768px) {
      padding: 120px 20px 60px 20px;
    }
  }

  .contact_section {
    width: 100%;
    padding: 60px 120px;
    border-radius: 24px;
    background-image: url("../public/hero-bg.png");
    background-size: cover;
    background-position: left;
    background-repeat: no-repeat;

    @media screen and (max-width: 998px) {
      padding: 60px;
      border-radius: 18px;
    }

    @media screen and (max-width: 768px) {
      padding: 40px 20px;
    }
  }

  .roadmap_section {
    width: 100%;
    padding: 100px 40px;

    @media screen and (max-width: 768px) {
      padding: 60px 40px;
    }

    @media screen and (max-width: 540px) {
      padding: 60px 0px;
    }

    @media screen and (max-width: 441px) {
      padding-bottom: 100px;
    }

  }
}

